force-app/main/default/objects/Lease__c/fields/cDate_Type__c.field-meta.xml
<CustomField>
    <fullName>cDate_Type__c</fullName>
    <formula>IF(ISBLANK(TEXT(Date_Type__c)), &apos;N/A&apos;,TEXT(Date_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Type</label>
    <type>Text</type>
</CustomField>