force-app/main/default/objects/Lease__c/fields/cLease_Date_c__c.field-meta.xml
<CustomField>
    <fullName>cLease_Date_c__c</fullName>
    <formula>IF(ISBLANK(Lease_Date__c),&apos;N/A&apos;,TEXT(MONTH(Lease_Date__c))+&quot;/&quot; +TEXT(DAY(Lease_Date__c))+&quot;/&quot; +TEXT(YEAR(Lease_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Date</label>
    <type>Text</type>
</CustomField>