force-app/main/default/objects/Lease__c/fields/cLease_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>cLease_Document_Name__c</fullName>
    <formula>TEXT(Lease_Document_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Document Name</label>
    <type>Text</type>
</CustomField>