force-app/main/default/objects/Lease__c/fields/Date_Type__c.field-meta.xml
<CustomField>
    <fullName>Date_Type__c</fullName>
    <label>Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approximate Date</fullName>
            </value>
            <value>
                <fullName>Date of Document</fullName>
            </value>
            <value>
                <fullName>Signature Block Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>