force-app/main/default/objects/Lease__c/fields/Lease_Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Lease_Document_Name__c</fullName>
    <label>Lease Document Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Combined Lease</fullName>
            </value>
            <value>
                <fullName>Highlighted Lease</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 01</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 02</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 03</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 04</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 05</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 06</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 07</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 08</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 09</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 10</fullName>
            </value>
            <value>
                <fullName>Master Lease</fullName>
            </value>
            <value>
                <fullName>Consent</fullName>
            </value>
            <value>
                <fullName>Lease Commencement Memo</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 01 Commencement Memo</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 02 Commencement Memo</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 03 Commencement Memo</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 04 Commencement Memo</fullName>
            </value>
            <value>
                <fullName>Lease Amendment 05 Commencement Memo</fullName>
            </value>
            <value>
                <fullName>Indemnification Agreement</fullName>
            </value>
            <value>
                <fullName>Coworking/Executive Suite Lease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>