force-app/main/default/objects/Lease__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Murray Aronson Document</fullName>
            </value>
            <value>
                <fullName>Original Document</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>